# REST_Django

./: Note  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/scripts/: wait_for_it.sh
api/watchmate/: db.sqlite3
api/watchmate/watchlist_app/: admin.py  models.py  urls.py  views.py
api/watchmate/watchlist_app/api/: serializers.py  urls.py  views.py
api/watchmate/watchlist_app/migrations/: 0001_initial.py  0002_movie_description.py
api/watchmate/watchmate/: settings.py  urls.py
nginx/: .htpasswd  nginx.demo.conf  nginx.dev.conf
nginx/ssl/: localhost-key.pem  localhost.pem  nginx.conf
nginx/templates/: default.dev.conf.template
